--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-fastapi>=0.110.0
-uvicorn>=0.25.0
-pydantic>=2.5.3
-jinja2>=3.1.3
-requests>=2.31.0
-influxdb>=5.3.1
-aiosqlite>=0.19.0
-black
+fastapi>=0.115.11
+uvicorn>=0.34.0
+pydantic>=2.10.6
+jinja2>=3.1.5
+requests>=2.32.3
+influxdb>=5.3.2
+aiosqlite>=0.21.0
+black>=25.1.0
+starlette>=0.46.0
